@@ -13,7 +13,6 @@
     <script type = "text/javascript" src="{% static '/js/main.js' %}"></script>
     <title>OLMS Lite</title>
 
-
 </head>
 <body>
   <header id="titlebar">
