@@ -26,9 +26,9 @@
                 Kym is a senior computer science major at Georgia Southern University and will be graduating in May 2019.
                 <br>He currently serves as the group lead of his senior capstone project.
              <br><br><strong><u>Byron Hickey</u></strong><br>
-
+                Byron is a senior computer science major at Georgia Southern University and will be graduating in May 2019.
              <br><br><strong><u>Cameron Morgan</u></strong><br>
-
+                Cameron is a senior computer science major at Georgia Southern University and will be graduating in May 2019.
              <br><br> <strong><u>Austin Simmons</u></strong><br>
                 Austin is a senior computer science major at Georgia Southern University and will be graduating in May 2019.
                 <br>He also works at Koyo Bearings NA in Sylvania GA as a Co-Op.
